--- a/IR.ipynb
+++ b/IR.ipynb
@@ -14,7 +14,7 @@
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "#pip install nltk\n",
+    "##pip install nltk\n",
     "#nltk.download('stopwords')"
    ]
   },
