add df in position index

--- a/IR.ipynb
+++ b/IR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 139,
    "id": "5c16d497",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 140,
    "id": "d671b565",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "id": "92ae17c0",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "id": "01d135e8",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 143,
    "id": "df94effa",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 144,
    "id": "8796357b",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 145,
    "id": "ee540efa",
    "metadata": {},
    "outputs": [
@@ -183,26 +183,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "antony :\t {0: [0], 1: [0], 5: [0]}\n",
-      "brutus :\t {0: [1], 1: [1], 3: [0]}\n",
-      "caeser :\t {0: [2], 1: [2], 3: [1], 4: [0], 5: [1]}\n",
-      "cleopatra :\t {0: [3]}\n",
-      "mercy :\t {0: [4], 2: [0], 3: [2], 4: [1], 5: [2]}\n",
-      "worser :\t {0: [5], 2: [1], 3: [3], 4: [2]}\n",
-      "calpurnia :\t {1: [3]}\n",
-      "angels :\t {6: [0], 7: [0], 8: [0]}\n",
-      "fools :\t {6: [1], 7: [1], 8: [1], 9: [0]}\n",
-      "fear :\t {6: [2], 7: [2], 9: [1]}\n",
-      "in :\t {6: [3], 7: [3], 8: [2], 9: [2]}\n",
-      "rush :\t {6: [4], 7: [4], 8: [3], 9: [3]}\n",
-      "to :\t {6: [5], 7: [5], 8: [4], 9: [4]}\n",
-      "tread :\t {6: [6], 7: [6], 8: [5], 9: [5]}\n",
-      "where :\t {6: [7], 7: [7], 8: [6], 9: [6]}\n"
+      "antony :\t [3, {0: [0], 1: [0], 5: [0]}]\n",
+      "brutus :\t [3, {0: [1], 1: [1], 3: [0]}]\n",
+      "caeser :\t [5, {0: [2], 1: [2], 3: [1], 4: [0], 5: [1]}]\n",
+      "cleopatra :\t [1, {0: [3]}]\n",
+      "mercy :\t [5, {0: [4], 2: [0], 3: [2], 4: [1], 5: [2]}]\n",
+      "worser :\t [4, {0: [5], 2: [1], 3: [3], 4: [2]}]\n",
+      "calpurnia :\t [1, {1: [3]}]\n",
+      "angels :\t [3, {6: [0], 7: [0], 8: [0]}]\n",
+      "fools :\t [4, {6: [1], 7: [1], 8: [1], 9: [0]}]\n",
+      "fear :\t [3, {6: [2], 7: [2], 9: [1]}]\n",
+      "in :\t [4, {6: [3], 7: [3], 8: [2], 9: [2]}]\n",
+      "rush :\t [4, {6: [4], 7: [4], 8: [3], 9: [3]}]\n",
+      "to :\t [4, {6: [5], 7: [5], 8: [4], 9: [4]}]\n",
+      "tread :\t [4, {6: [6], 7: [6], 8: [5], 9: [5]}]\n",
+      "where :\t [4, {6: [7], 7: [7], 8: [6], 9: [6]}]\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "positional_index = {}\n",
+    "pos_indx = {}\n",
     "\n",
     "for term in Term:\n",
     "    for documnt in range(0,10):                     #['antony', 'brutus', 'caeser', 'cleopatra', 'mercy', 'worser']\n",
@@ -211,10 +213,18 @@
     "            for pos in range(0,len(Token[documnt])):\n",
     "                if term == Token[documnt][pos]:\n",
     "                    position.append(pos)\n",
-    "            positional_index.setdefault(term, {})[documnt] = position #dictionary\n",
-    "        \n",
-    "for x in positional_index:\n",
-    "    print(x , \":\\t\" , positional_index[x])  "
+    "            pos_indx.setdefault(term, {})[documnt] = position #dictionary\n",
+    "           \n",
+    "for term in pos_indx:\n",
+    "    lst = []\n",
+    "    lst.append(len(pos_indx[term]))\n",
+    "    lst.append(pos_indx[term])\n",
+    "    positional_index.setdefault(term,lst)\n",
+    "\n",
+    "for term in index:\n",
+    "    print(term , \":\\t\" , positional_index[term])  \n",
+    "\n",
+    "print(positional_index[\"antony\"][1][5][0])"
    ]
   },
   {
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 146,
    "id": "46759631",
    "metadata": {},
    "outputs": [],
@@ -251,14 +261,14 @@
     "    \n",
     "    doc_result={}\n",
     "    if len(query) > 0 and query[0] in positional_index:        #query!=null & antony in positional_index ?\n",
-    "        doc_result = positional_index[query[0]]                # doc_result = {0: [0], 1: [0], 5: [0]} is antony list\n",
-    "    \n",
+    "        doc_result = positional_index[query[0]][1]                # doc_result = {0: [0], 1: [0], 5: [0]} is antony list\n",
+    "        \n",
     "        for i in range(1,len(query)):                          #i=1, query[1]=brutus\n",
     "            Filter={}                                          #result of (antony & brutus)\n",
     "            for doc in doc_result:                                     # doc = 0\n",
-    "                if query[i] in positional_index and doc in positional_index[query[i]]:#query[i]=\"brutus\"/if doc(0) in brutus dictionary ?\n",
+    "                if query[i] in positional_index and doc in positional_index[query[i]][1]:#query[i]=\"brutus\"/if doc(0) in brutus dictionary ?\n",
     "                    for index in doc_result[doc]:                      # index = 0\n",
-    "                        if index+1 in positional_index[query[i]][doc]: # if indx+1=(1) in [brutus][D0] list ?\n",
+    "                        if index+1 in positional_index[query[i]][1][doc]: # if indx+1=(1) in [brutus][D0] list ?\n",
     "                            \n",
     "                            if doc in Filter:\n",
     "                                Filter[doc].append(index+1)\n",
@@ -269,6 +279,17 @@
     "        return \"none\"\n",
     "    else:\n",
     "        return doc_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "b51e5a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#result = Search(\"to tread where\")\n",
+    "#print(result)"
    ]
   },
   {
@@ -290,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 148,
    "id": "b93325a5",
    "metadata": {},
    "outputs": [],
@@ -309,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 149,
    "id": "56fa948e",
    "metadata": {},
    "outputs": [
@@ -363,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 150,
    "id": "8df76843",
    "metadata": {},
    "outputs": [
@@ -423,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 158,
    "id": "ce3b4516",
    "metadata": {},
    "outputs": [
@@ -458,7 +479,7 @@
     "idf=[]\n",
     "\n",
     "for i in range(0,M):\n",
-    "    df.append(len(positional_index[Term[i]]))\n",
+    "    df.append(positional_index[Term[i]][0])\n",
     "    if df[i] == 0:\n",
     "        idf.append(0)  \n",
     "    else: \n",
@@ -485,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 159,
    "id": "8bc80a40",
    "metadata": {},
    "outputs": [
@@ -547,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 160,
    "id": "dce65241",
    "metadata": {},
    "outputs": [
@@ -594,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 161,
    "id": "58b53d48",
    "metadata": {},
    "outputs": [
@@ -650,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 162,
    "id": "840ebb1a",
    "metadata": {},
    "outputs": [],
@@ -684,9 +705,10 @@
     "        query_nliz.append(round(query_tf_idf[i]/query_length,9))\n",
     "#------------------------------ print Table\n",
     "    table = PrettyTable()\n",
-    "    table.field_names=[\" \",\"tf\", \"tf_tw\", \"idf\", \"tf_idf\", \"nliz\"]\n",
+    "    table.field_names=[\" \",\"tf-raw\", \"w tf(1+log tf)\", \"idf\", \"tf*idf\", \"normalized\"]\n",
     "    for i in range(0,M):\n",
-    "        table.add_row([Term[i], query_tf[i], query_tf_tw[i], idf[i], query_tf_idf[i], query_nliz[i]])\n",
+    "        if query_tf[i] !=0 :\n",
+    "            table.add_row([Term[i], query_tf[i], query_tf_tw[i], idf[i], query_tf_idf[i], query_nliz[i]])\n",
     "    print(table)\n",
     "    print(\"query length =\",query_length)\n",
     "\n",
@@ -695,21 +717,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "b3152b5c",
+   "execution_count": 163,
+   "id": "04a54005",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getScore(q_nliz,docN):        \n",
+    "def getScore(q_nliz,docN): \n",
     "    score=0\n",
-    "    for i in range(0,M):\n",
+    "    column = []\n",
+    "    for i in range(0,M): \n",
+    "        if q_nliz[i] !=0:\n",
+    "            column.append(q_nliz[i]*doc_nliz[i][docN])\n",
     "        score+=q_nliz[i]*doc_nliz[i][docN]\n",
+    "    column.append(score)\n",
+    "    name = \"doc\"+ str(docN+1)\n",
+    "    \n",
+    "    table.add_column(name,column)\n",
     "    return score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "72c4642e",
    "metadata": {},
    "outputs": [
@@ -718,64 +747,27 @@
      "output_type": "stream",
      "text": [
       "Enter Your Query: antony brutus\n",
-      "+-----------+----+-------+--------------+-------------+-------------+\n",
-      "|           | tf | tf_tw |     idf      |    tf_idf   |     nliz    |\n",
-      "+-----------+----+-------+--------------+-------------+-------------+\n",
-      "|   antony  | 1  |  1.0  | 0.5228787453 | 0.522878745 | 0.707106781 |\n",
-      "|   brutus  | 1  |  1.0  | 0.5228787453 | 0.522878745 | 0.707106781 |\n",
-      "|   caeser  | 0  |   0   | 0.3010299957 |     0.0     |     0.0     |\n",
-      "| cleopatra | 0  |   0   |     1.0      |     0.0     |     0.0     |\n",
-      "|   mercy   | 0  |   0   | 0.3010299957 |     0.0     |     0.0     |\n",
-      "|   worser  | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "| calpurnia | 0  |   0   |     1.0      |     0.0     |     0.0     |\n",
-      "|   angels  | 0  |   0   | 0.5228787453 |     0.0     |     0.0     |\n",
-      "|   fools   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|    fear   | 0  |   0   | 0.5228787453 |     0.0     |     0.0     |\n",
-      "|     in    | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|    rush   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|     to    | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|   tread   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|   where   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "+-----------+----+-------+--------------+-------------+-------------+\n",
+      "+--------+--------+----------------+--------------+-------------+-------------+\n",
+      "|        | tf-raw | w tf(1+log tf) |     idf      |    tf*idf   |  normalized |\n",
+      "+--------+--------+----------------+--------------+-------------+-------------+\n",
+      "| antony |   1    |      1.0       | 0.5228787453 | 0.522878745 | 0.707106781 |\n",
+      "| brutus |   1    |      1.0       | 0.5228787453 | 0.522878745 | 0.707106781 |\n",
+      "+--------+--------+----------------+--------------+-------------+-------------+\n",
       "query length = 0.739462213\n",
       "Cosine similarity doc1 = 0.538392517266962\n",
       "Cosine similarity doc2 = 0.577877359918002\n",
-      "returned doc =  D2 D1 \n",
+      "+------------------------------------------------+\n",
+      "|         product(query * matched docs)          |\n",
+      "+--------+-------------------+-------------------+\n",
+      "|        |        doc1       |        doc2       |\n",
+      "+--------+-------------------+-------------------+\n",
+      "| antony | 0.269196258633481 | 0.288938679959001 |\n",
+      "| brutus | 0.269196258633481 | 0.288938679959001 |\n",
+      "|  sum   | 0.538392517266962 | 0.577877359918002 |\n",
+      "+--------+-------------------+-------------------+\n",
+      "Returned doc =  D2 D1 \n",
       "=========================================================================================================================\n",
-      "\n",
-      "Enter Your Query: brutus caeser\n",
-      "+-----------+----+-------+--------------+-------------+-------------+\n",
-      "|           | tf | tf_tw |     idf      |    tf_idf   |     nliz    |\n",
-      "+-----------+----+-------+--------------+-------------+-------------+\n",
-      "|   antony  | 0  |   0   | 0.5228787453 |     0.0     |     0.0     |\n",
-      "|   brutus  | 1  |  1.0  | 0.5228787453 | 0.522878745 | 0.866637795 |\n",
-      "|   caeser  | 1  |  1.0  | 0.3010299957 | 0.301029996 | 0.498937803 |\n",
-      "| cleopatra | 0  |   0   |     1.0      |     0.0     |     0.0     |\n",
-      "|   mercy   | 0  |   0   | 0.3010299957 |     0.0     |     0.0     |\n",
-      "|   worser  | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "| calpurnia | 0  |   0   |     1.0      |     0.0     |     0.0     |\n",
-      "|   angels  | 0  |   0   | 0.5228787453 |     0.0     |     0.0     |\n",
-      "|   fools   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|    fear   | 0  |   0   | 0.5228787453 |     0.0     |     0.0     |\n",
-      "|     in    | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|    rush   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|     to    | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|   tread   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "|   where   | 0  |   0   | 0.3979400087 |     0.0     |     0.0     |\n",
-      "+-----------+----+-------+--------------+-------------+-------------+\n",
-      "query length = 0.603341728\n",
-      "Cosine similarity doc1 = 0.439285067104623\n",
-      "Cosine similarity doc2 = 0.471501520586445\n",
-      "Cosine similarity doc4 = 0.7706091184992631\n",
-      "returned doc =  D4 D2 D1 \n",
-      "=========================================================================================================================\n",
-      "\n",
-      "Enter Your Query: nada\n",
-      "none\n",
-      "\n",
-      "=========================================================================================================================\n",
-      "\n",
-      "Enter Your Query: \n"
+      "\n"
      ]
     }
    ],
@@ -784,18 +776,27 @@
     "    query = input(\"Enter Your Query: \")\n",
     "    if query == \"\":\n",
     "        break\n",
-    "    result = Search(query)\n",
+    "    result = Search(query) #return relevant document \n",
     "    if result == \"none\":\n",
     "        print(result)\n",
     "    else :\n",
-    "        q_nliz=getQueryNormalized(query)\n",
+    "        #----------------- table\n",
+    "        table = PrettyTable()\n",
+    "        table.title = 'product(query * matched docs)'\n",
+    "        q = Clean(query)\n",
+    "        q.append(\"sum\")\n",
+    "        table.add_column(\" \",q)\n",
+    "        \n",
+    "        q_nliz=getQueryNormalized(query)  \n",
     "        score = []\n",
-    "        for docN in result:\n",
-    "            sc=getScore(q_nliz,docN)\n",
+    "        for docN in result: \n",
+    "            sc=getScore2(q_nliz,docN)\n",
     "            p=( sc , docN)\n",
     "            score.append(p)\n",
     "            print(\"Cosine similarity\",\"doc\"+str(docN+1),\"=\",sc)\n",
-    "            \n",
+    "        \n",
+    "        print(table)\n",
+    "        \n",
     "        score.sort(reverse=True)\n",
     "        print(\"Returned doc = \",end = ' ')\n",
     "        for doc in score:\n",
